fdo#84810 Avoid calc crash when using Paste Special - Link

Change-Id: I52c072578ccc0b9f75a850613056e74d400eb532